--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,12 +1,39 @@
 .lalo{
     display: flex;
     align-items: center;
-    flex-direction: row-reverse;
-    background-color: #a9a9a9;
-    background-size: 100px 100% ;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    flex-direction: row;
+    background-color: #295052;
     border: 2px solid blanchedalmond;
     width: 100%;
-    align-items: end;
+    justify-content: space-between;
+    height: max-content;
+}
+.lila{
+    border: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-items: center;
+    height: 80%;
+    width: 50%;
+    margin: auto;
+    justify-content: center;
+}
+.links{
+    margin: 5px;
+}
+.links button{
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px;
+    padding: 5px;
+}
+.links button:hover{
+    background-color: #9E924F;
+}
+.SearchBar{
+    display: flex;
+    height: 100%;
+    flex-direction: column-reverse;
+    align-items: center;
 }
