--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: darkslategrey;
+  background-image: url(https://wallpapercave.com/wp/wp10057679.jpg);
+  background-size: 100%;
 }
 
 code {
